--- a/Tutorials-1.ipynb
+++ b/Tutorials-1.ipynb
@@ -112,13 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "cv2.startWindowThread()\n",
+    "cv2.namedWindow(\"preview\")\n",
     "cv2.imshow('image',image)\n",
-    "if(cv2.waitKey(0)=='q'):\n",
-    "    cv2.destroyAllWindows()"
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +143,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,13 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "cv2.startWindowThread()\n",
+    "cv2.namedWindow(\"preview\")\n",
     "cv2.imshow('image',converted_image)\n",
-    "if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "    cv2.destroyAllWindows()"
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
