--- a/Tutorials-3.ipynb
+++ b/Tutorials-3.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,14 +475,28 @@
     "# Part-4\n",
     "## Blurring\n",
     "\n",
+    "Blurring is used to remove noise\n",
+    "\n",
     "<ol>\n",
     "    <li>filter2d</li>\n",
-    "    <li>"
+    "    <li>AverageBlur</li>\n",
+    "    <li>GuassianBlur</li>\n",
+    "    <li>MedianBlur</li>\n",
+    "    <li>BilateralBlur</li>\n",
+    "</ol>\n",
+    "<br>\n",
+    "When to apply what blur:\n",
+    "<br>__BilateralBlur__ : apply when the edge has to be preserved.\n",
+    "<br>__GuassianBlur__: apply when there is guassian noise in the image\n",
+    "<br>__AverageBlur__: for the size of kernel, average is found and the central pixel is replaced by average\n",
+    "<br>__MedianBlur__: for the size of kernel, median is found and the central pixel is replaced by median\n",
+    "\n",
+    "<br>Please visit https://docs.opencv.org/3.1.0/d4/d13/tutorial_py_filtering.html for more details\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,19 +504,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### cv2.filter2d()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "kernel = np.ones((5,5),np.uint8)/255\n",
     "filtered_image = cv2.filter2D(image,-1,kernel)\n",
+    "show_img(image)\n",
     "show_img(filtered_image)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### cv2.blur()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,8 +540,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Guassian Blur"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,11 +557,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Median Blur"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "show_img(image)\n",
+    "show_img(cv2.medianBlur(image,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bilateral Blur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_img(image)\n",
+    "show_img(cv2.bilateralFilter(image,100,100,75))"
+   ]
   }
  ],
  "metadata": {
